{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 21,
  "lineage": "2f294cc0-f696-1bc8-3c00-90f4c01861fa",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:119505194353:network-acl/acl-0b8f994bb9d8045c9",
            "default_network_acl_id": "acl-0b8f994bb9d8045c9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b8f994bb9d8045c9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "119505194353",
            "subnet_ids": [
              "subnet-02a7e31c2b6fa276b",
              "subnet-0dd0196107ff21cc8"
            ],
            "tags": {
              "Name": "arbitrage-vpc-default"
            },
            "tags_all": {
              "Name": "arbitrage-vpc-default"
            },
            "vpc_id": "vpc-055cb8a93864a65cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:119505194353:route-table/rtb-0b420f1bb659453e3",
            "default_route_table_id": "rtb-0b420f1bb659453e3",
            "id": "rtb-0b420f1bb659453e3",
            "owner_id": "119505194353",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "arbitrage-vpc-default"
            },
            "tags_all": {
              "Name": "arbitrage-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-055cb8a93864a65cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:119505194353:security-group/sg-0d1523386059eaec0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d1523386059eaec0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "119505194353",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arbitrage-vpc-default"
            },
            "tags_all": {
              "Name": "arbitrage-vpc-default"
            },
            "vpc_id": "vpc-055cb8a93864a65cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014e87c3b827dae9d",
            "arn": "arn:aws:ec2:us-east-2:119505194353:elastic-ip/eipalloc-014e87c3b827dae9d",
            "domain": "vpc",
            "id": "eipalloc-014e87c3b827dae9d",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-52-14-124-159.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.124.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "arbitrage-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "arbitrage-vpc-us-east-2a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:119505194353:internet-gateway/igw-03aa4f97c0763d453",
            "id": "igw-03aa4f97c0763d453",
            "owner_id": "119505194353",
            "tags": {
              "Name": "arbitrage-vpc"
            },
            "tags_all": {
              "Name": "arbitrage-vpc"
            },
            "vpc_id": "vpc-055cb8a93864a65cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014e87c3b827dae9d",
            "association_id": "eipassoc-0551afd9a349cc44a",
            "connectivity_type": "public",
            "id": "nat-0d5372565d6146e3a",
            "network_interface_id": "eni-0d0c608b1453417bc",
            "private_ip": "10.0.1.50",
            "public_ip": "52.14.124.159",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-020c87dc216036ce2",
            "tags": {
              "Name": "arbitrage-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "arbitrage-vpc-us-east-2a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e1537a6957893f5f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d5372565d6146e3a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e1537a6957893f5f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03aa4f97c0763d453",
            "id": "r-rtb-052212c57ad3819611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-052212c57ad381961",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:119505194353:route-table/rtb-0e1537a6957893f5f",
            "id": "rtb-0e1537a6957893f5f",
            "owner_id": "119505194353",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "arbitrage-vpc-private"
            },
            "tags_all": {
              "Name": "arbitrage-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-055cb8a93864a65cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:119505194353:route-table/rtb-052212c57ad381961",
            "id": "rtb-052212c57ad381961",
            "owner_id": "119505194353",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "arbitrage-vpc-public"
            },
            "tags_all": {
              "Name": "arbitrage-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-055cb8a93864a65cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096c24b89d8a6e6eb",
            "route_table_id": "rtb-0e1537a6957893f5f",
            "subnet_id": "subnet-02a7e31c2b6fa276b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3deb876b10765eb",
            "route_table_id": "rtb-0e1537a6957893f5f",
            "subnet_id": "subnet-0dd0196107ff21cc8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bdadccc549786e4",
            "route_table_id": "rtb-052212c57ad381961",
            "subnet_id": "subnet-020c87dc216036ce2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ebc639e632bb822",
            "route_table_id": "rtb-052212c57ad381961",
            "subnet_id": "subnet-0b47df26f8db92f29"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:119505194353:subnet/subnet-02a7e31c2b6fa276b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a7e31c2b6fa276b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119505194353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arbitrage-vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "arbitrage-vpc-private-us-east-2a"
            },
            "vpc_id": "vpc-055cb8a93864a65cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:119505194353:subnet/subnet-0dd0196107ff21cc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd0196107ff21cc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119505194353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arbitrage-vpc-private-us-east-2b"
            },
            "tags_all": {
              "Name": "arbitrage-vpc-private-us-east-2b"
            },
            "vpc_id": "vpc-055cb8a93864a65cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:119505194353:subnet/subnet-020c87dc216036ce2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020c87dc216036ce2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119505194353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arbitrage-vpc-public-us-east-2a"
            },
            "tags_all": {
              "Name": "arbitrage-vpc-public-us-east-2a"
            },
            "vpc_id": "vpc-055cb8a93864a65cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:119505194353:subnet/subnet-0b47df26f8db92f29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b47df26f8db92f29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119505194353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arbitrage-vpc-public-us-east-2b"
            },
            "tags_all": {
              "Name": "arbitrage-vpc-public-us-east-2b"
            },
            "vpc_id": "vpc-055cb8a93864a65cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:119505194353:vpc/vpc-055cb8a93864a65cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b8f994bb9d8045c9",
            "default_route_table_id": "rtb-0b420f1bb659453e3",
            "default_security_group_id": "sg-0d1523386059eaec0",
            "dhcp_options_id": "dopt-03f51de1d689de659",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-055cb8a93864a65cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b420f1bb659453e3",
            "owner_id": "119505194353",
            "tags": {
              "Name": "arbitrage-vpc"
            },
            "tags_all": {
              "Name": "arbitrage-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}